# Software-Intern-Rnd-Assignment

./: README.md  desktop.ini  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flam_rnd_assignment/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flam_rnd_assignment/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/flam_rnd_assignment/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: app.js  app.ts  index.html  style.css
